Disable asciidoctor and gitPublishPush from the release workflow

--- a/build.gradle
+++ b/build.gradle
@@ -168,8 +168,6 @@ release {
 
 task doRelease {
     dependsOn(
-        'publishToSonatype',
-        'asciidoctor',
-        'gitPublishPush'
+        'publishToSonatype'
     )
 }
