--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,18 @@
+buildscript {
+  configurations.classpath {
+    resolutionStrategy {
+      //This is required by 'git-publish' version '2.1.3':
+      force 'org.eclipse.jgit:org.eclipse.jgit:5.5.1.201910021850-r'
+    }
+  }
+}
+
 plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
     id 'org.asciidoctor.convert' version '2.4.0'
-    id 'org.ajoberstar.git-publish' version '3.0.0-rc.1'
+    id 'org.ajoberstar.git-publish' version '2.1.3'
     id 'com.diffplug.spotless' version '5.1.1'
     id 'net.researchgate.release' version '2.6.0'
     id 'de.marcphilipp.nexus-publish' version '0.3.0'
@@ -168,6 +177,8 @@ release {
 
 task doRelease {
     dependsOn(
-        'publishToSonatype'
+        'publishToSonatype',
+        'asciidoctor',
+        'gitPublishPush'
     )
 }
