--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,11 @@ wrapper {
 
 group = 'fr.jmini.utils'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
 
 repositories {
     jcenter()
